--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,13 @@
 </head>
 
 <body>
+
+    <div class="preloader-backdrop">
+        <img src="../src/assets/loader.gif" class="loader"></img>
+    </div>
+
+    <div class="progress-line"></div>
+
     <header>
         <div class="logo-band">
             <img class="logo-band__logo" src="../src/assets/logo.png" alt="logo">
